--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: torch
+name: graphvid
 channels:
   - conda-forge
   - https://www.idiap.ch/software/bob/conda
@@ -152,135 +152,128 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h6597ccf_2
   - pip:
-    - aadict==0.2.3
-    - aiohttp==3.6.3
-    - anyio==3.1.0
-    - ase==3.21.1
-    - asset==0.6.13
-    - async-timeout==3.0.1
-    - av==8.0.2
-    - babel==2.9.1
-    - blinker==1.4
-    - brotli==1.0.7
-    - cachetools==4.1.1
-    - cffi==1.14.1
-    - chardet==3.0.4
-    - clearml==1.1.0
-    - clearml-agent==1.1.0
-    - cmake==3.18.0
-    - cycler==0.10.0
-    - cython==0.29.21
-    - dash==1.14.0
-    - dash-core-components==1.10.2
-    - dash-html-components==1.0.3
-    - dash-renderer==1.6.0
-    - dash-table==4.9.0
-    - dominate==2.5.1
-    - fast-slic==0.4.0
-    - fastgat==0.1.0
-    - flask==1.1.2
-    - flask-compress==1.5.0
-    - flask-menu==0.7.2
-    - flask-nav==0.6
-    - flask-navigation==0.2.0
-    - fsspec==2021.5.0
-    - funcsigs==1.0.2
-    - furl==2.1.0
-    - future==0.18.2
-    - fvcore==0.1.5.post20210825
-    - globre==0.1.5
-    - google-auth==1.20.0
-    - google-auth-oauthlib==0.4.1
-    - googledrivedownloader==0.4
-    - grpcio==1.31.0
-    - humanfriendly==8.2
-    - idna==2.10
-    - imageio==2.9.0
-    - iopath==0.1.9
-    - isodate==0.6.0
-    - itsdangerous==1.1.0
-    - joblib==0.16.0
-    - json5==0.9.5
-    - jupyter-server==1.8.0
-    - jupyterlab==3.0.16
-    - jupyterlab-server==2.6.0
-    - kiwisolver==1.2.0
-    - littleutils==0.2.2
-    - llvmlite==0.36.0
-    - matplotlib==3.3.0
-    - mpmath==1.2.1
-    - multicoretsne==0.1
-    - multidict==4.7.6
-    - natsort==7.0.1
-    - nbclassic==0.3.1
-    - networkx==2.5
-    - numpy==1.21.0
-    - nvidia-ml-py==11.450.51
-    - nvitop==0.3.6.2
-    - oauthlib==3.1.0
-    - ogb==1.3.1
-    - opencv-python==4.3.0.36
-    - orderedmultidict==1.0.1
-    - outdated==0.2.1
-    - pandas==1.1.0
-    - pathlib2==2.3.5
-    - pillow==7.2.0
-    - plotly==4.9.0
-    - pomegranate==0.13.4
-    - portalocker==2.3.2
-    - protobuf==3.12.4
-    - psutil==5.7.2
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pydeprecate==0.3.0
-    - pyflow==0.3.0
-    - pyhocon==0.3.55
-    - pyjwt==1.7.1
-    - python-igraph==0.9.6
-    - python-louvain==0.15
-    - pytorch-lightning==1.3.3
-    - pytz==2020.1
-    - pywavelets==1.1.1
-    - pyyaml==5.3.1
-    - rdflib==5.0.0
-    - requests==2.24.0
-    - requests-file==1.5.1
-    - requests-oauthlib==1.3.0
-    - retrying==1.3.3
-    - rsa==4.6
-    - scikit-image==0.17.2
-    - scikit-learn==0.23.2
-    - seaborn==0.11.0
-    - sniffio==1.2.0
-    - sympy==1.8
-    - tabulate==0.8.9
-    - tensorboard==2.3.0
-    - tensorboard-plugin-wit==1.7.0
-    - texttable==1.6.3
-    - threadpoolctl==2.1.0
-    - tifffile==2020.10.1
-    - torch==1.9.0+cu111
-    - torch-cluster==1.5.9
-    - torch-geometric==1.7.2
-    - torch-scatter==2.0.8
-    - torch-sparse==0.6.11
-    - torch-spline-conv==1.2.1
-    - torchaudio==0.9.0
-    - torchmetrics==0.3.2
-    - torchsummary==1.5.1
-    - torchvision==0.10.0+cu111
-    - trains==0.16.2rc0
-    - trains-agent==0.16.0
-    - typing==3.7.4.3
-    - typing-extensions==3.7.4.3
-    - urllib3==1.25.10
-    - virtualenv==16.7.10
-    - visitor==0.1.3
-    - warmup-scheduler==0.3.2
-    - websocket-client==1.0.1
-    - werkzeug==1.0.1
-    - xbob-extension==0.2.1
-    - yacs==0.1.8
-    - yarl==1.5.1
-    - youtube-dl==2021.6.6
-prefix: /home/eitank/anaconda3/envs/torch
+      - aadict==0.2.3
+      - aiohttp==3.6.3
+      - anyio==3.1.0
+      - ase==3.21.1
+      - asset==0.6.13
+      - async-timeout==3.0.1
+      - av==8.0.2
+      - babel==2.9.1
+      - blinker==1.4
+      - brotli==1.0.7
+      - cachetools==4.1.1
+      - cffi==1.14.1
+      - chardet==3.0.4
+      - clearml==1.1.0
+      - clearml-agent==1.1.0
+      - cmake==3.18.0
+      - cycler==0.10.0
+      - cython==0.29.21
+      - dash==1.14.0
+      - dash-core-components==1.10.2
+      - dash-html-components==1.0.3
+      - dash-renderer==1.6.0
+      - dash-table==4.9.0
+      - dominate==2.5.1
+      - fast-slic==0.4.0
+      - fastgat==0.1.0
+      - flask==1.1.2
+      - flask-compress==1.5.0
+      - flask-menu==0.7.2
+      - flask-nav==0.6
+      - flask-navigation==0.2.0
+      - fsspec==2021.5.0
+      - funcsigs==1.0.2
+      - furl==2.1.0
+      - future==0.18.2
+      - fvcore==0.1.5.post20210825
+      - globre==0.1.5
+      - google-auth==1.20.0
+      - google-auth-oauthlib==0.4.1
+      - googledrivedownloader==0.4
+      - grpcio==1.31.0
+      - humanfriendly==8.2
+      - idna==2.10
+      - imageio==2.9.0
+      - iopath==0.1.9
+      - isodate==0.6.0
+      - itsdangerous==1.1.0
+      - joblib==0.16.0
+      - json5==0.9.5
+      - jupyter-server==1.8.0
+      - jupyterlab==3.0.16
+      - jupyterlab-server==2.6.0
+      - kiwisolver==1.2.0
+      - littleutils==0.2.2
+      - llvmlite==0.36.0
+      - matplotlib==3.3.0
+      - mpmath==1.2.1
+      - multicoretsne==0.1
+      - multidict==4.7.6
+      - natsort==7.0.1
+      - nbclassic==0.3.1
+      - networkx==2.5
+      - numpy==1.21.0
+      - nvidia-ml-py==11.450.51
+      - nvitop==0.3.6.2
+      - oauthlib==3.1.0
+      - ogb==1.3.1
+      - opencv-python==4.3.0.36
+      - orderedmultidict==1.0.1
+      - outdated==0.2.1
+      - pandas==1.1.0
+      - pathlib2==2.3.5
+      - pillow==7.2.0
+      - plotly==4.9.0
+      - pomegranate==0.13.4
+      - portalocker==2.3.2
+      - protobuf==3.12.4
+      - psutil==5.7.2
+      - pyasn1==0.4.8
+      - pyasn1-modules==0.2.8
+      - pydeprecate==0.3.0
+      - pyflow==0.3.0
+      - pyhocon==0.3.55
+      - pyjwt==1.7.1
+      - python-igraph==0.9.6
+      - python-louvain==0.15
+      - pytorch-lightning==1.3.3
+      - pytz==2020.1
+      - pywavelets==1.1.1
+      - pyyaml==5.3.1
+      - rdflib==5.0.0
+      - requests==2.24.0
+      - requests-file==1.5.1
+      - requests-oauthlib==1.3.0
+      - retrying==1.3.3
+      - rsa==4.6
+      - scikit-image==0.17.2
+      - scikit-learn==0.23.2
+      - seaborn==0.11.0
+      - sniffio==1.2.0
+      - sympy==1.8
+      - tabulate==0.8.9
+      - tensorboard==2.3.0
+      - tensorboard-plugin-wit==1.7.0
+      - texttable==1.6.3
+      - threadpoolctl==2.1.0
+      - tifffile==2020.10.1
+      - torch
+      - torchvision
+      - torchaudio
+      - torchmetrics
+      - torchsummary==1.5.1
+      - trains==0.16.2rc0
+      - trains-agent==0.16.0
+      - typing==3.7.4.3
+      - typing-extensions==3.7.4.3
+      - urllib3==1.25.10
+      - virtualenv==16.7.10
+      - visitor==0.1.3
+      - websocket-client==1.0.1
+      - werkzeug==1.0.1
+      - xbob-extension==0.2.1
+      - yacs==0.1.8
+      - yarl==1.5.1
+      - youtube-dl==2021.6.6
